<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--USERNAME-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textAutoComplete"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </android.support.design.widget.TextInputLayout>

    <!--IME-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/text_input_layout"
        android:hint="@string/name">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPersonName"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_below="@+id/text_input_layout_name"
        android:text="@string/hint_name"
        android:layout_marginLeft="16dp"
        android:textSize="10sp"
        android:layout_marginRight="16dp"/>

    <!--EMAIL-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/text_input_layout_name">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </android.support.design.widget.TextInputLayout>

    <!--GUMB ZA PASSWORD-->

    <Button
        android:id="@+id/btn_getMyPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/datumPodsjetnika"
        android:background="@color/colorAccent"
        android:text="@string/getPass"
        android:textColor="@color/white"
        android:textSize="25dp" />
</RelativeLayout>
