<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/swiperefresh"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_longClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longClick"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:maxLines="2"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_longClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <TextView
                    android:id="@+id/tv_neplaceniRacuni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:text="@string/neplaceniRacuni"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp"
                    tools:ignore="SmallSp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/not_paid_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_neplaceniRacuni"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/tv_placeniRacuni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/not_paid_recycler"
                    android:background="@color/gray"
                    android:text="@string/placeniRacuni"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp"
                    tools:ignore="SmallSp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/paid_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_placeniRacuni"
                    android:scrollbars="vertical" />
            </RelativeLayout>
        </ScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" />
    </RelativeLayout>
<!--</android.support.v4.widget.SwipeRefreshLayout>-->